[package]
name = "engineer"
version = "0.1.0"
authors = ["peter"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.19"

vulkano = "0.14"
vulkano-shaders = "0.14"
vulkano-win = "0.14"

glyph_brush = "0.5.3"

cgmath = "0.17"

image = "0.22"